apps/fillForm/client/main.css
body {
  padding: 10px;
  font-family: sans-serif;
}

.main {
  /* Fix the jumping footer up-down when components are loading
    this size is close to the default size of the nav-aside-wrapper
   */
  min-height: 360px;
}

.footer-light-socials {
  display: none;
}

/* TODO: maybe epfl-elements shouldn't do any of this jazz. */
/* Removed this two line as tearing is happening on breadcrumb */
/*body .breadcrumb-container, body .breadcrumb-item {
  position: inherit;
}*/

body .breadcrumb-container::before {
  display: none;
}

/* remove transparency on buttons */
.btn-secondary {
  background: white !important;
}

/* .dropdown-menu is all wrong position-wise. */
.dropdown-menu-popper {
  min-width: 10rem;
  font-size: 0.920rem;
  color: #212121;
  text-align: left;
  list-style: none;
  background-color: #fff;
  /background-clip: padding-box;
  border: 1px solid rgba(33,33,33,.15);
  border-radius: 2px;
}


.table {
  height: auto !important;
  display: revert !important;
  overflow-y: auto !important;

}

.table tfoot tr td button {
  margin-bottom: 6px !important;
  margin-top: 6px !important;
}

.formio-component-label-hidden {
  position: relative;
}

.form-group label {
  color: inherit !important;
}

.formio-select-autocomplete-input {
  opacity: 0;
  position: relative;
  z-index: -1;
  display: block;
  height: 0;
  border: none;
}

.formio-component-resource .control-label--hidden.field-required, .formio-component-select .control-label--hidden.field-required {
  right: 40px;
  z-index: 2;
}

.epfl-formio-component-textarea-large textarea {
  height: 400px !important;
}

.field-required::after {
  position: relative;
  z-index: 10;
}
.field-required::after, .tab-error::after {
  content: " *";
  color: #eb0000;
}

.control-label--hidden {
  position: absolute;
  top: 6px;
  right: 5px;
}

table .btn {
  padding: .375rem .75rem !important;
}

td > .form-group {
  margin-bottom: 0;
}

.form-group .has-error {
  margin-top: 15px;
  color: red;
}

.formio-editor-read-only-content {
  color: #707070;
  white-space: pre-wrap;
}

.invalid-feedback {
  display: block !important;
}

div[id^=error-list].alert-success {
  display: none;
}

.formio-component-file .fileSelector {
    position:relative;
    padding:15px;
    border:2px dashed #ddd;
    text-align:center
}
.formio-component-file .fileSelector .loader-wrapper {
    display:none;
    width:100%;
    height:100%;
    background-color:rgba(0,0,0,.1)
}
.formio-component-file .fileSelector .loader-wrapper .loader {
    height:45px;
    width:45px;
    margin-top:-23px;
    margin-left:-23px
}
.formio-component-file .fileSelector a {
    text-decoration:underline
}
.formio-component-file .status {
    margin-top:4px;
    font-size:.9rem
}
.formio-component-file .list-group-item .fa {
    cursor:pointer
}
.formio-component-file .fileSelector.fileDragOver {
    border-color:#127abe
}
.formio-component-file .fileSelector .fa,
.formio-component-file .fileSelector .glyphicon {
    font-size:20px;
    margin-right:5px
}

.formio-component-file .fileSelector .browse {
    cursor:pointer
}

.formio-component-file .fa-remove::before {
  content: "\f014"; /* Replace the cross with a bin */
}

.formio-component-pdfAnnexFile a[ref="fileBrowse"] {
  text-decoration-color: rgb(255, 0, 0);
  text-decoration-line: underline;
  text-decoration-style: solid;
}

.bg-awaiting {
  background-color: #ff9933;
}

.dashboard .dashboard-header {
    font-size: .68rem;
    margin-bottom: 0;
    margin-right: 0;
    padding-left: 0 !important;
    padding-right: 0 !important;
    cursor: pointer;
}

.dashboard .dashboard-header-step {
    margin-left: .1rem;
    margin-right: .1rem;
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.dashboard-header .header-sortable-icon-neutral {
    font-size: .55rem;
}

.dashboard-header .header-sortable-icon-arrow {
    font-size: 0.68rem;
}

.dashboard .dashboard-row-workflow-instance {
    margin-top: .4rem !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.dashboard .dashboard-row-notification-logs {
    margin-top: 0 !important;
}

.dashboard .dashboard-step {
    margin-left: .25rem !important;
    margin-right: .25rem !important;
}

.dashboard .dashboard-phdStudentName,
.dashboard .dashboard-doctoralProgramName,
.dashboard .dashboard-launched,
.dashboard .dashboard-dueDate,
.dashboard .dashboard-action-edit
{
    margin-top: 0.7rem;
}

.dashboard .notification-log-step-count {
    margin-top: .55rem;
    font-size: .8rem;
    white-space: nowrap;
}

.dashboard .notification-log-step-count:not(.notification-log-step-count-with-plus-button) {
    margin-right: 0.2rem;
}

.dashboard .notification-log-step-count-number {
    margin-right: .2rem;
}

.dashboard .notification-log-step-count-envelope {
    font-size: 0.7rem;
}

.dashboard .notification-log-step-plus {
    margin-left: .2rem;
    font-size: .4rem;
}

.dashboard .dashboard-activity-log,
.dashboard .dashboard-notification-log {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.dashboard .dashboard-activity-log {
    margin-top: .2rem;
}

.dashboard .notification-log-entry,
.dashboard .activity-log-entry {
    font-size: .65rem;
}

.dashboard .activity-log-icon {
    font-size: .65rem;
}

.old-dashboard .old-dashboard-step {
    height: 3em;
    max-height: 3em;
    min-height: 3em;
}

/** THE ARROW CASE
  As it look like safari (Webkit engine) is the only browser to
  handle the summary-detail arrow with a display:flex, remove it everywhere and
  set it manually
 */
details > summary::marker, /* Latest Chrome, Edge, Firefox */
details > summary::-webkit-details-marker /* Safari */ {
  display: none;
}

details > summary {
  position: relative;
  list-style: none;
}

details > summary {
  position: relative;
  list-style: none;
}

details > summary::before {
  content: "\25B6";
  font-size: smaller;
  position: absolute;
  top: 13.5px;
}

details[open] > summary::before {
  top: 13.5px;
  font-size: smaller;
  transform-origin: center;
  transform: translate(0%, -0%) rotate(90deg);
}

.task span:first-of-type {
  margin-left: 12px;
}

/**
    END OF THE ARROW CASE
 */

.import-scipers-header {
    font-weight: bold;
}

.import-scipers-header .import-scipers-header-label {
    cursor: pointer;
    color: inherit;
    text-decoration: none;
}

.import-scipers-header .header-sortable-icon-arrow {
    font-weight: normal;
    font-size: 0.68rem;
}
.import-scipers-header .header-sortable-icon-neutral {
    font-weight: normal;
    font-size: 0.55rem;
}


    /* fix the formio input checkbox being invisible because of some strange filter on safari */
.form-check input[type='checkbox'] {
  filter: none;
}

.dropdown-toggle:after {
  display: none !important;
}

.nav-aside span {
  color: #495057;
  display: block;
  padding: 0.625rem 3rem;
  position: relative;
  text-decoration: none;
}

.nav-aside span:not(.first-span):before {
  background: #d5d5d5;
  content: " ";
  height: 1px;
  position: absolute;
  top: 0;
  -webkit-transition: background .25s;
  transition: background .25s;
  width: calc(100% - 6rem);
}

.tox-tinymce {
  border-radius: 0px !important;
}

.mce-content-readonly {
  background-color: #e6e6e6;
}

